<resources>
    <!-- login page -->
    <string name="app_name">Mattress Money</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">User name</string>
    <string name="button_send">Login</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="checkbox_remember_me">remember me?</string>

    <string name="ph">Place Holder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="mattress">Mattress</string>
    <string name="money">Money</string>
    <string name="login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_activity_two">ActivityTwo</string>

    <!-- settings activity -->
    <string name="setting">MISC SETTINGS</string>
    <string name="about">About Us</string>

    <!-- profile activity -->
    <string name="overview">ph user name</string>

    <!-- dropdown menu select items -->
    <string name="select_menu_base">Menu</string>
    <string name="select_profile">Profile</string>
    <string name="select_stocks">Stocks</string>
    <string name="select_lookup">Lookup/Buy</string>
    <string name="select_sell">Sell</string>
    <string name="select_leaderboards">Leaderboards</string>
    <string name="select_settings">Settings</string>
    <string name="select_logout">Logout</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_lookup">Lookup</string>
    <string name="title_activity_sell">Sell</string>
    <string name="title_activity_leaderboards">Leaderboards</string>
    <string name="title_activity_settings">Settings</string>


</resources>
