<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="mattressmoney.myapplication.ActivityTwo" >

    <item android:id="@+id/activity_two_ab_menu"
          android:title="@string/select_menu_base"
          android:icon="@mipmap/menu_icon"
          app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/menu_profile"
                android:title="@string/select_profile" />
            <item
                android:id="@+id/menu_stocks"
                android:title="@string/select_stocks" />
            <item
                android:id="@+id/menu_lookup"
                android:title="@string/select_lookup" />
            <item
                android:id="@+id/menu_sell"
                android:title="@string/select_sell" />
            <item
                android:id="@+id/menu_leaderboards"
                android:title="@string/select_leaderboards" />
            <item
                android:id="@+id/menu_setings"
                android:title="@string/select_settings" />
            <item
                android:id="@+id/menu_logout"
                android:title="@string/select_lookup" />
        </menu>
    </item>
</menu>
